--- a/mtj/newsevents.html
+++ b/mtj/newsevents.html
@@ -18,8 +18,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -143,7 +142,7 @@
         <div class="breadcrum">
           <div class="title">News and Events<br>
             <a href="">Home  /  </a>
-            <a href="">News and Events</a>
+            <a href="newsevents.html">News and Events</a>
           </div>
         </div>
        </div>
@@ -174,7 +173,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                    <a href="letter.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -188,7 +187,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                    <a href="letter.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -202,7 +201,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                    <a href="letter.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -216,7 +215,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                    <a href="letter.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -230,7 +229,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                    <a href="letter.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -244,7 +243,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                    <a href="letter.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -264,7 +263,7 @@
                         </p>
                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="#"> Read more...</a>
+                        <a href="letter.html"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -282,7 +281,7 @@
                         </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="#"> Read more...</a>
+                        <a href="letter.html"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -296,7 +295,7 @@
                         </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="#"> Read more...</a>
+                        <a href="letter.html"> Read more...</a>
                       </div>
                     </div>
                   </div>
