--- a/mtj/index.html
+++ b/mtj/index.html
@@ -149,12 +149,12 @@
                   gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                   Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum, nulla
                   luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</p>
-                <button type="submit" class="btn btn-primary">
+                <a href="letter.html" class="btn btn-primary">
                   <i class="icon icon-ex-small">
                     <svg focusable="false">
                       <use xlink:href="#icon_letter"></use>
                     </svg>
-                  </i>Letter of Reference</button>
+                  </i>Letter of Reference</a>
               </div>
           </div>
           </a>
@@ -341,12 +341,11 @@
       </div>
     </div>
   </section>
-
   <section class="footer">
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-5 col-lg-5 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -355,15 +354,16 @@
               <h5>Campaign Address</h5>
               <p>
                 200 Jefferson Avenue, Suite 1500 <br>
-                Memphis, TN 38103
+                Memphis, TN   38103
               </p>
-              <p class="phone">Phone Number : (901) 428-4360<br>
-                Email Address: tondra.davis4MET4Chancellor@gmail.com
+              <p class="phone">
+                <b>Phone Number :</b> (901) 428-4360<br>
+                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-3 col-lg-3 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
               <li>
@@ -375,14 +375,14 @@
               <li>
                 <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
+              <li >
                 <a href="gallary.html">GALLARY</a>
               </li>
-              <li>
+              <li >
                 <a href="contact.html">Connect us</a>
               </li>
             </ul>
-            <button type="submit" class="btn btn-primary">Donate Now ></button>
+            <button class="btn btn-primary form-btn">Donate Now ></button> 
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
