--- a/mtj/newsevents.html
+++ b/mtj/newsevents.html
@@ -173,7 +173,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="letter.html"> Read more...</a>
+                    <a href="#"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -187,7 +187,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="letter.html"> Read more...</a>
+                    <a href="#"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -201,7 +201,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="letter.html"> Read more...</a>
+                    <a href="#"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -215,7 +215,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="letter.html"> Read more...</a>
+                    <a href="#"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -229,7 +229,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="letter.html"> Read more...</a>
+                    <a href="#"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -243,7 +243,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="letter.html"> Read more...</a>
+                    <a href="#"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -263,7 +263,7 @@
                         </p>
                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="letter.html"> Read more...</a>
+                        <a href="#"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -281,7 +281,7 @@
                         </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="letter.html"> Read more...</a>
+                        <a href="#"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -295,7 +295,7 @@
                         </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="letter.html"> Read more...</a>
+                        <a href="#"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -314,7 +314,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-5 col-lg-5 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -325,13 +325,14 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p class="phone">Phone Number : (901) 428-4360<br>
-                Email Address: tondra.davis4MET4Chancellor@gmail.com
+              <p class="phone">
+                <b>Phone Number :</b> (901) 428-4360<br>
+                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-3 col-lg-3 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
               <li>
@@ -350,7 +351,7 @@
                 <a href="contact.html">Connect us</a>
               </li>
             </ul>
-            <button type="submit" class="btn btn-primary">Donate Now ></button>
+            <button class="btn btn-primary form-btn">Donate Now ></button> 
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
