--- a/mtj/contact.html
+++ b/mtj/contact.html
@@ -148,33 +148,37 @@
        </div>
     </div>
   </section>
-  <section class="about-us">
+  <section class="about-us contact-form">
     <div class="container">
       <div class="row">
-        <div class="col-md-7 col-lg-7 col-sm-12 mt-0">
-          <h2>Get in Touch</h2>
-          <p>Our team is happy to answer your questions. <br>
-            Fill out the form and we will be in touch as soon as possible.</p>
-          <form>
-            <div class="form-inline">
+       <div class="col-md-7 col-lg-7 col-sm-12 col">
+         <div class="row">
+          <div class="col-md-10 col-lg-10 col-sm-12">
+            <h2>Get in Touch</h2>
+            <p>Our team is happy to answer your questions. <br>
+              Fill out the form and we will be in touch as soon as possible.</p>
+            <form>
+              <div class="form-inline">
+                <div class="form-group">
+                 <input placeholder="Full Name" type="text" class="form-control" id="name">
+                </div>
+                <div class="form-group">
+                 <input placeholder="Email Address" type="email  " class="form-control" id="email">
+                </div>
+              </div>  
               <div class="form-group">
-               <input placeholder="Full Name" type="text" class="form-control" id="name">
+               <input placeholder="Subject" type="text" class="form-control" id="subject">
               </div>
               <div class="form-group">
-               <input placeholder="Email Address" type="email  " class="form-control" id="email">
+               <textarea class="form-control" rows="5" id="comment">Write Message
+               </textarea>
               </div>
-            </div>  
-            <div class="form-group">
-             <input placeholder="Subject" type="text" class="form-control" id="subject">
-            </div>
-            <div class="form-group">
-             <textarea class="form-control" rows="5" id="comment">Write Message
-             </textarea>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Send Message</button>
-          </form>
-        </div>
-        <div class="col-md-5 col-lg-5 col-sm-12 mt-0">
+              <button type="submit" class="btn btn-primary btn-block">Send Message</button>
+            </form>
+          </div>
+         </div>
+       </div>
+        <div class="col-md-5 col-lg-5 col-sm-12">
           <div class="address">
            <h4>Tondra Davis, Treasurer</h4>
           
@@ -207,7 +211,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-5 col-lg-5 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -218,13 +222,14 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p class="phone">Phone Number : (901) 428-4360<br>
-                Email Address: tondra.davis4MET4Chancellor@gmail.com
+              <p class="phone">
+                <b>Phone Number :</b> (901) 428-4360<br>
+                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-3 col-lg-3 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
               <li>
@@ -243,7 +248,7 @@
                 <a href="contact.html">Connect us</a>
               </li>
             </ul>
-            <button type="submit" class="btn btn-primary">Donate Now ></button>
+            <button class="btn btn-primary form-btn">Donate Now ></button> 
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
