--- a/mtj/gallary.html
+++ b/mtj/gallary.html
@@ -301,7 +301,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-5 col-lg-5 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -312,13 +312,14 @@
                 200 Jefferson Avenue, Suite 1500 <br>
                 Memphis, TN   38103
               </p>
-              <p class="phone">Phone Number : (901) 428-4360<br>
-                Email Address: tondra.davis4MET4Chancellor@gmail.com
+              <p class="phone">
+                <b>Phone Number :</b> (901) 428-4360<br>
+                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-3 col-lg-3 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
               <li>
