--- a/mtj/letter.html
+++ b/mtj/letter.html
@@ -141,9 +141,9 @@
       <img class="inner-bg" src="images/about-hd.jpg" alt="">
       <div class="container">
         <div class="breadcrum">
-          <div class="title">News and Events<br>
-            <a href="">Home / </a>
-            <a href="">News and Events</a>
+          <div class="title">Letter of Reference<br>
+            <!-- <a href="">Home / </a>
+            <a href="">News and Events</a> -->
           </div>
         </div>
       </div>
@@ -183,7 +183,7 @@
     <div class="container">
       <footer class="pt-4 pb-4 pt-md-5">
         <div class="row d-flex">
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-5 col-lg-5 col-sm-12 col">
             <h4>CONTACT US</h4>
             <div class="footer-logo">
               <img class="mb-2 text-center ft-logo" src="./images/logo.png" alt="">
@@ -192,15 +192,16 @@
               <h5>Campaign Address</h5>
               <p>
                 200 Jefferson Avenue, Suite 1500 <br>
-                Memphis, TN 38103
+                Memphis, TN   38103
               </p>
-              <p class="phone">Phone Number : (901) 428-4360<br>
-                Email Address: tondra.davis4MET4Chancellor@gmail.com
+              <p class="phone">
+                <b>Phone Number :</b> (901) 428-4360<br>
+                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
               </p>
             </div>
           </div>
 
-          <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="col-md-3 col-lg-3 col-sm-12 col">
             <h4>Quick Links</h4>
             <ul class="footer-li">
               <li>
@@ -212,14 +213,14 @@
               <li>
                 <a href="newsevents.html">NEWS & EVENTS</a>
               </li>
-              <li>
+              <li >
                 <a href="gallary.html">GALLARY</a>
               </li>
-              <li>
+              <li >
                 <a href="contact.html">Connect us</a>
               </li>
             </ul>
-            <button type="submit" class="btn btn-primary">Donate Now ></button>
+            <button class="btn btn-primary form-btn">Donate Now ></button> 
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
