--- a/mtj/newsevents.html
+++ b/mtj/newsevents.html
@@ -173,7 +173,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                   <a href="newsevents-more.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -187,7 +187,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                   <a href="newsevents-more.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -201,7 +201,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                   <a href="newsevents-more.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -215,7 +215,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                   <a href="newsevents-more.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -229,7 +229,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                   <a href="newsevents-more.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -243,7 +243,7 @@
                     <h5 class="card-title"> Proin ac lectus vitae augue mattis vitae augue mattis lacinia</h5>
                     <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                     </p>
-                    <a href="#"> Read more...</a>
+                   <a href="newsevents-more.html"> Read more...</a>
                   </div>
                 </div>
               </div>
@@ -263,7 +263,7 @@
                         </p>
                        <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="#"> Read more...</a>
+                       <a href="newsevents-more.html"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -281,7 +281,7 @@
                         </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="#"> Read more...</a>
+                       <a href="newsevents-more.html"> Read more...</a>
                       </div>
                     </div>
                   </div>
@@ -295,7 +295,7 @@
                         </p>
                         <p class="card-text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar sic tempor.
                         </p>
-                        <a href="#"> Read more...</a>
+                       <a href="newsevents-more.html"> Read more...</a>
                       </div>
                     </div>
                   </div>
