--- a/mtj/newsevents-more.html
+++ b/mtj/newsevents-more.html
@@ -119,7 +119,7 @@
                   <a href="gallary.html">GALLARY</a>
                 </li>
                 <li>
-                  <a href="contact.html">Connect us</a>
+                  <a href="contact.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -265,7 +265,7 @@
                 <a href="gallary.html">GALLARY</a>
               </li>
               <li>
-                <a href="contact.html">Connect us</a>
+                <a href="contact.html">Contact us</a>
               </li>
             </ul>
             <button class="btn btn-primary form-btn">Donate Now ></button>
