--- a/mtj/aboutus.html
+++ b/mtj/aboutus.html
@@ -122,7 +122,7 @@
                   <a href="gallary.html">GALLARY</a>
                 </li>
                 <li >
-                  <a href="contact.html">Connect us</a>
+                  <a href="contact.html">Contact us</a>
                 </li>
             </ul>
             </div>
@@ -340,7 +340,7 @@
                 <a href="gallary.html">GALLARY</a>
               </li>
               <li >
-                <a href="contact.html">Connect us</a>
+                <a href="contact.html">Contact us</a>
               </li>
             </ul>
             <button class="btn btn-primary form-btn">Donate Now ></button> 
