--- a/mtj/gallary.html
+++ b/mtj/gallary.html
@@ -120,7 +120,7 @@
                   <a href="gallary.html">GALLARY</a>
                 </li>
                 <li >
-                  <a href="contact.html">Connect us</a>
+                  <a href="contact.html">Contact us</a>
                 </li>
             </ul>
           </div>
@@ -335,7 +335,7 @@
                 <a href="gallary.html">GALLARY</a>
               </li>
               <li >
-                <a href="contact.html">Connect us</a>
+                <a href="contact.html">Contact us</a>
               </li>
             </ul>
             <button type="submit" class="btn btn-primary">Donate Now ></button>
