--- a/mtj/index.html
+++ b/mtj/index.html
@@ -118,7 +118,7 @@
                   <a href="gallary.html">GALLARY</a>
                 </li>
                 <li>
-                  <a href="contact.html">Connect us</a>
+                  <a href="contact.html">Contact us</a>
                 </li>
               </ul>
             </div>
@@ -379,7 +379,7 @@
                 <a href="gallary.html">GALLARY</a>
               </li>
               <li >
-                <a href="contact.html">Connect us</a>
+                <a href="contact.html">Contact us</a>
               </li>
             </ul>
             <button class="btn btn-primary form-btn">Donate Now ></button> 
