--- a/mtj/letter.html
+++ b/mtj/letter.html
@@ -106,13 +106,13 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li>
+                <li class="active">
                   <a href="index.html">Home</a>
                 </li>
                 <li>
                   <a href="aboutus.html">About Us</a>
                 </li>
-                <li class="active">
+                <li>
                   <a href="newsevents.html">NEWS & EVENTS</a>
                 </li>
                 <li>
@@ -142,8 +142,8 @@
       <div class="container">
         <div class="breadcrum">
           <div class="title">Letter of Reference<br>
-            <!-- <a href="">Home / </a>
-            <a href="">News and Events</a> -->
+            <a href="index.html">Home / </a>
+            <a href="">Letter of Reference</a>
           </div>
         </div>
       </div>
@@ -153,7 +153,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2 class="text-center">Letter of Reference for Melanie Taylor</h2>
+          <h2>Letter of Reference for Melanie Taylor</h2>
           <p>It is with great pleasure I write this letter of reference on behalf of attorney Melanie Taylor whom I have
             known for several years. As a colleague, I have witnessed Melanie exhibit a high standard of excellence in
             our legal profession. She is intelligent, hardworking, and resourceful often showcasing her keen analytical
@@ -170,7 +170,7 @@
             organization which exposes inner city youths to dance and theatrical productions. <br> <br>
             For the foregoing reasons, I am honored to provide this letter of reference for Attorney Melanie Taylor.
           </p>
-          <p class="text-right">Sincerely, <br> <br>
+          <p class="text-right">Sincerely, <br>
             DeVenus Foster, Esq.
           </p>
         </div>
