--- a/mtj/aboutus.html
+++ b/mtj/aboutus.html
@@ -179,7 +179,7 @@
           </p>
         </div>
         <div class="col-md-5 col-lg-5 col-sm-12 mt-0">
-          <img src="images/info-1.jpg" alt="">
+          <img src="images/aboutus.jpg" alt="">
         </div>
       </div>
     </div>
