--- a/mtj/gallary.html
+++ b/mtj/gallary.html
@@ -154,7 +154,7 @@
     <div class="container">
       <div class="row">
         <div class="column">
-          <img src="images/info-1.jpg" alt="">
+          <img src="images/aboutus.jpg" alt="">
           <img src="images/info-2.jpg" alt="">
         </div>
         <div class="column">
