--- a/mtj/index.html
+++ b/mtj/index.html
@@ -236,7 +236,7 @@
   <section class="section-03">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-6 col-sm-12 section-endo-info">
+        <div class="col-md-4 col-lg-4 col-sm-12 section-endo-info">
           <div class="endo-info">
             <div class="bread-crum">ENDORSEMENTS</div>
             <h1>WHAT PEOPLE SAY <br>
@@ -248,7 +248,8 @@
               vulputate, felis tellus mollis orci, sed rhoncus pronin sapien nunc accuan eget.</p>
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-1 col-lg-1"></div>
+        <div class="col-md-7 col-lg-7">
           <div id="myCarousel-1" class="carousel slide" data-ride="carousel">
 
             <!-- Indicators -->
@@ -373,13 +374,13 @@
                 <a href="aboutus.html">About Us</a>
               </li>
               <li>
-                <a href="newsevents.html">NEWS & EVENTS</a>
+                <a href="newsevents.html">News & Events</a>
               </li>
               <li >
-                <a href="gallary.html">GALLARY</a>
+                <a href="gallary.html">Gallary</a>
               </li>
               <li >
-                <a href="contact.html">Contact us</a>
+                <a href="contact.html">Contact Us</a>
               </li>
             </ul>
             <button class="btn btn-primary form-btn">Donate Now ></button> 
@@ -429,6 +430,16 @@
         </div>
       </footer>
     </div>
+    </div>
+  </section>
+  <section>
+    <div class="copyright">
+      <div class="container">
+        <p>
+          Copyright © 2022, melanietaylor.com, All rights reserved.
+        </p>
+      </div>
+      </div>
   </section>
 
 </body>
