--- a/mtj/aboutus.html
+++ b/mtj/aboutus.html
@@ -338,7 +338,7 @@
                 <a href="newsevents.html">News & Events</a>
               </li>
               <li >
-                <a href="gallary.html">Gallery</a>
+                <a href="gallary.html">Gallary</a>
               </li>
               <li >
                 <a href="contact.html">Contact Us</a>
