--- a/mtj/gallary.html
+++ b/mtj/gallary.html
@@ -127,7 +127,7 @@
                   <a href="newsevents.html">NEWS & EVENTS</a>
                 </li>
                 <li class="active">
-                  <a href="gallary.html">GALLERY</a>
+                  <a href="gallary.html">GALLARY</a>
                 </li>
                 <li >
                   <a href="contact.html">Contact us</a>
@@ -342,7 +342,7 @@
                 <a href="newsevents.html">News & Events</a>
               </li>
               <li >
-                <a href="gallary.html">Gallery</a>
+                <a href="gallary.html">Gallary</a>
               </li>
               <li >
                 <a href="contact.html">Contact Us</a>
