--- a/mtj/gallary.html
+++ b/mtj/gallary.html
@@ -137,14 +137,14 @@
 
           </div>
         </nav>
-        <button type="submit" class="btn btn-primary form-btn">
+       <a href="https://rally.org/f/bgVazt3ERu5%20" class="btn btn-primary form-btn">
           <i class="icon icon-ex-small">
             <svg focusable="false">
               <use xlink:href="#icon_donate"></use>
             </svg>
           </i>
           <span>Donate Now ></span>
-        </button>
+        </a>
       </div>
     </div>
 
@@ -173,6 +173,8 @@
           <a href="images/info-6.jpg"><img src="images/info-6.jpg" alt="" title=""/></a>
           <a href="images/info-3.jpg"><img src="images/info-3.jpg" alt="" title=""/></a>
         </div>
+        </div>
+        <div class="gallery">
         <div class="column column-1">
           <a href="images/info-5.jpg"><img src="images/info-5.jpg" alt="" title=""/></a>
           <a href="images/info-6.jpg"><img src="images/info-6.jpg" alt="" title=""/></a>
@@ -324,7 +326,7 @@
               </p>
               <p class="phone">
                 <b>Phone Number :</b> (901) 428-4360<br>
-                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
+                <b>Email Address :</b> <a href="mailto:tondra.davis4MET4Chancellor@gmail.com">tondra.davis4MET4Chancellor@gmail.com</a>
               </p>
             </div>
           </div>
@@ -348,7 +350,7 @@
                 <a href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <button class="btn btn-primary form-btn">Donate Now ></button> 
+              <a href="https://rally.org/f/bgVazt3ERu5%20" class="btn btn-primary form-btn">Donate Now ></a>  
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
@@ -459,19 +461,10 @@
   else sticky.removeClass('fixed');
 });
 
-$('.form-btn').on('click', function() {
-  $('body').addClass('form-slider');
-  return false;
-});
-$('.closed').on('click', function() {
- // $('body').removeClass('form-slider');
-  document.getElementsByTagName("body")[0].removeAttribute("class");
-  return false;
-});
 (function() {
-        var $gallery = new SimpleLightbox('.gallery .column a', {});
-        var $gallery = new SimpleLightbox('.gallery .column-1 a', {});
-        var $gallery = new SimpleLightbox('.gallery .column-2 a', {});
+        var $gallery = new SimpleLightbox('.gallery .column a', {showCounter:false});
+        var $gallery = new SimpleLightbox('.gallery .column-1 a', {showCounter:false});
+        var $gallery = new SimpleLightbox('.gallery .column-2 a', {showCounter:false});
     })();
 </script>
 
