--- a/mtj/newsevents.html
+++ b/mtj/newsevents.html
@@ -126,14 +126,14 @@
 
           </div>
         </nav>
-        <button type="submit" class="btn btn-primary form-btn">
+       <a href="https://rally.org/f/bgVazt3ERu5%20" class="btn btn-primary form-btn">
           <i class="icon icon-ex-small">
             <svg focusable="false">
               <use xlink:href="#icon_donate"></use>
             </svg>
           </i>
           <span>Donate Now ></span>
-        </button>
+        </a>
       </div>
     </div>
 
@@ -328,7 +328,7 @@
               </p>
               <p class="phone">
                 <b>Phone Number :</b> (901) 428-4360<br>
-                <b>Email Address :</b> tondra.davis4MET4Chancellor@gmail.com
+                <b>Email Address :</b> <a href="mailto:tondra.davis4MET4Chancellor@gmail.com">tondra.davis4MET4Chancellor@gmail.com</a>
               </p>
             </div>
           </div>
@@ -352,7 +352,7 @@
                 <a href="contact.html">Contact Us</a>
               </li>
             </ul>
-            <button class="btn btn-primary form-btn">Donate Now ></button> 
+            <a href="https://rally.org/f/bgVazt3ERu5%20" class="btn btn-primary form-btn">Donate Now ></a> 
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
@@ -422,15 +422,6 @@
   else sticky.removeClass('fixed');
 });
 
-$('.form-btn').on('click', function() {
-  $('body').addClass('form-slider');
-  return false;
-});
-$('.closed').on('click', function() {
- // $('body').removeClass('form-slider');
-  document.getElementsByTagName("body")[0].removeAttribute("class");
-  return false;
-});
 </script>
 
 </html>
