--- a/mtj/letter.html
+++ b/mtj/letter.html
@@ -127,7 +127,7 @@
 
           </div>
         </nav>
-       <a href="https://rally.org/f/bgVazt3ERu5%20" class="btn btn-primary form-btn">
+       <a href="https://rally.org/covers/iiGZ12zPhia/contribute" target="_blank" class="btn btn-primary form-btn">
           <i class="icon icon-ex-small">
             <svg focusable="false">
               <use xlink:href="#icon_donate"></use>
@@ -221,7 +221,7 @@
                 <a href="contact.html">Contact Us</a>
               </li>
             </ul>
-              <a href="https://rally.org/f/bgVazt3ERu5%20" class="btn btn-primary form-btn">Donate Now ></a>  
+              <a href="https://rally.org/covers/iiGZ12zPhia/contribute" target="_blank" class="btn btn-primary form-btn">Donate Now ></a>  
             <div class="social-media">
               <a href="#">
                 <i class="icon icon-small">
