--- a/dlt/index.html
+++ b/dlt/index.html
@@ -88,9 +88,9 @@
             <div class="item active">
 
               <div class="carousel-caption">
-                <h3>Now Accepting Owner <br>
+                <h3>Now Accepting Owner 
                   Operations & Fleet<br>
-                  Owners with Active<br>
+                  Owners with Active
                   Authority
                 </h3>
               </div>
@@ -103,9 +103,9 @@
             <div class="item">
 
               <div class="carousel-caption">
-                <h3>Now Accepting Owner <br>
+                <h3>Now Accepting Owner 
                   Operations & Fleet<br>
-                  Owners with Active<br>
+                  Owners with Active
                   Authority
                 </h3>
               </div>
@@ -118,9 +118,9 @@
             <div class="item">
 
               <div class="carousel-caption">
-                <h3>Now Accepting Owner <br>
+                <h3>Now Accepting Owner 
                   Operations & Fleet<br>
-                  Owners with Active<br>
+                  Owners with Active
                   Authority
                 </h3>
               </div>
