--- a/dlt/index.html
+++ b/dlt/index.html
@@ -89,7 +89,7 @@
 
               <div class="carousel-caption">
                 <h3>Now Accepting Owner 
-                  Operations & Fleet<br>
+                  Operators & Fleet<br>
                   Owners with Active
                   Authority
                 </h3>
@@ -104,7 +104,7 @@
 
               <div class="carousel-caption">
                 <h3>Now Accepting Owner 
-                  Operations & Fleet<br>
+                  Operators & Fleet<br>
                   Owners with Active
                   Authority
                 </h3>
@@ -119,7 +119,7 @@
 
               <div class="carousel-caption">
                 <h3>Now Accepting Owner 
-                  Operations & Fleet<br>
+                  Operators & Fleet<br>
                   Owners with Active
                   Authority
                 </h3>
